--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,7 @@
-body {
+html, body, #root, .App {
 	margin: 0;
 	padding: 0;
 	font-family: 'Comfortaa', cursive;
-}
-.App {
-	min-height: 100vh;
-	min-width: 100vw;
+	width: 100%;
+	height: 100%;
 }
